fixed an issue with scrollbars not being visible making it hard to see if something was scrollable

--- a/src/chords/chordfromscale/chordfromscale.module.css
+++ b/src/chords/chordfromscale/chordfromscale.module.css
@@ -3,5 +3,6 @@
 	border: 1px solid var(--outline-colour);
 	max-height: 15vh;
 	padding: 0.3rem;
-	overflow-y: auto;
+	overflow-y: scroll;
+	background-color: var(--body-colour);
 }
