--- a/src/elements/modalcontext/modalcontext.module.css
+++ b/src/elements/modalcontext/modalcontext.module.css
@@ -7,15 +7,7 @@
 	top: 0px;
 	left: 0px;
 	overflow: auto;
-	/* IE and Edge */
-	/* -ms-overflow-style: none;  */
-	/* Firefox  */
-	/* scrollbar-width: none;  */
 }
-
-/* #modal::-webkit-scrollbar {
-	display: none;
-} */
 
 #modal.unhide {
 	display: flex;
